<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lockscreen_video_recorder_uhudSoft.ui.HomeFrag"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_video_quality"
        android:name="com.lockscreen_video_recorder_uhudSoft.ui.VideoQualityFrag"
        android:label="@string/title_videoQuality"
        tools:layout="@layout/fragment_video_quality" />

    <!--<fragment
        android:id="@+id/navigation_alarm"
        android:name="com.sscustombottomnavigation.ui.AlarmFrag"
        android:label="@string/title_alarm"
        tools:layout="@layout/fragment_alarm"/>-->

    <!--<fragment
        android:id="@+id/navigation_notifications"
        android:name="com.sscustombottomnavigation.ui.NotificationFrag"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notification" />-->

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.lockscreen_video_recorder_uhudSoft.ui.SettingFrag"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting"/>
</navigation>