<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.VideoQualityFrag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:text="@string/str_chooseVideo_QualityBelow"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/id_rdQuality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <RadioButton
                android:id="@+id/id_btnQuality_214P"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/ic_bg_main"
                android:paddingStart="12dp"
                android:text="@string/str_qua214p"
                android:textColor="@color/color_black"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/id_btnQuality_480p"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/ic_bg_main"
                android:paddingStart="12dp"
                android:text="@string/str_qua480p"
                android:textColor="@color/color_black"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/id_btnQuality_720p"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/ic_bg_main"
                android:paddingStart="12dp"
                android:text="@string/str_qua720p"
                android:textColor="@color/color_black"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/id_btnQuality_1080p"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/ic_bg_main"
                android:paddingStart="12dp"
                android:text="@string/str_qua1080p"
                android:textColor="@color/color_black"
                android:textStyle="bold" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/id_submitButton"
            android:layout_width="220dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:background="@drawable/ic_bg_main"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />



    </LinearLayout>

</LinearLayout>