<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    android:orientation="vertical"
    android:paddingStart="12dp"
    android:paddingTop="24dp"
    android:paddingEnd="12dp"
    android:paddingBottom="@dimen/cbn_height"
    tools:context=".ui.HomeFrag">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/id_StartRecording"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/play"
            android:contentDescription="@string/str_DescStartRecording" />

        <ImageView
            android:id="@+id/id_txtRecordingStatus"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_StartRecording"
            android:layout_centerHorizontal="true"
            android:background="@drawable/start"
            android:contentDescription="@string/str_ClickToStart" />


        <RelativeLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_txtRecordingStatus"
            android:layout_marginTop="8dp"
            android:gravity="center">


            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="9dp"
                android:layout_marginStart="50dp"
                app:cardElevation="5dp"
                android:layout_alignParentStart="true"
                app:cardMaxElevation="5dp">

                <LinearLayout
                    android:id="@+id/id_lin_Video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:text="Videos">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/video" />

                    <TextView
                        android:id="@+id/list_item_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Saved Videos"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="9dp"
                app:cardCornerRadius="9dp"
                android:layout_marginEnd="50dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="5dp">

                <LinearLayout
                    android:id="@+id/id_lin_Priveiw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/eye" />

                    <TextView
                        android:id="@+id/id_priviewSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Preview Size"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/l1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="@string/AdMob_BannerAd_ID" />



    </RelativeLayout>
</ScrollView>